--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="styles/style.css"/>
+    <link rel="stylesheet" href="style.css"/>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>projekt trymestralny</title>
@@ -24,6 +24,10 @@
     <div>
         <label for="massInput">Masa kulki</label>
         <input type="text" id="massInput" placeholder="Wprowadź masę kulki" />
+    </div>
+    
+    <div>
+        <button id = 'rzut' class = "BigButton" onclick="rzut()">rzut</button>
     </div>
 
     <div>
