--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
     </div>
     
     <div>
-        <label for="forceInput">Prędkość:</label>
-        <input type="text" id="forceInput" placeholder="Wprowadź prędkość rzutu" />
+        <label for="forceInput">Moc rzutu:</label>
+        <input type="text" id="forceInput" placeholder="Wprowadź wartość" />
     </div>
 
     <div>
+        <label for="DumpingInput">Dumping:</label>
+        <input type="text" id="DumpingInput" placeholder="Wprowadź wartość" />
+    </div>
+
+
+    <div>
         <label for="heightInput">Kąd łuku rzutu:</label>
-        <input type="text" id="heightInput" placeholder="Wprowadź kąt łuku" />
+        <input type="text" id="heightInput" placeholder="Wprowadź wartość" />
     </div>
     
     <div>
