--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
     <div>
-        <label for="heightInput">Kąd łuku rzutu:</label>
-        <input type="text" id="heightInput" placeholder="Wprowadź wartość" />
+        <label for="angleInput">Kąd łuku rzutu:</label>
+        <input type="text" id="angleInput" placeholder="Wprowadź wartość" />
     </div>
     
     <div>
