Poprawa działania symulacji, dodatkowe parametry oporu

--- a/index.html
+++ b/index.html
@@ -13,18 +13,32 @@
     
     <div>
         <label for="forceInput">Moc rzutu:</label>
-        <input type="text" id="forceInput" placeholder="Wprowadź wartość" />
+        <input type="text" id="forceInput" placeholder="Wprowadź wartość" value="200"/>
     </div>
 
     <div>
-        <label for="DumpingInput">Dumping:</label>
-        <input type="text" id="DumpingInput" placeholder="Wprowadź wartość" />
+        <label for="DumpingInput">Dumping [0-1] (% straty energii przy kolizji):</label>
+        <input type="text" id="DumpingInput" placeholder="Wprowadź wartość" value="0.95"/>
+    </div>
+
+    <div>
+        <label for="airResistanceInput">Opór powietrza [0-1] (współczynnik oporu powietrza):</label>
+        <input type="text" id="airResistanceInput" placeholder="Wprowadź wartość" value="0.01"/>
+    </div>
+
+    <div>
+        <label for="groundResistanceInput">Tarcie [0-1] (współczynnik tarcia przy poruszaniu się po powierzchni):</label>
+        <input type="text" id="groundResistanceInput" placeholder="Wprowadź wartość" value="0.01"/>
     </div>
 
 
     <div>
-        <label for="angleInput">Kąd łuku rzutu:</label>
-        <input type="text" id="angleInput" placeholder="Wprowadź wartość" />
+        <label for="angleInput">Kąt łuku rzutu:</label>
+        <input type="text" id="angleInput" placeholder="Wprowadź wartość" value="45"/>
+    </div>
+    <div>
+        <label for="heightInput">Wysokość [0-300]:</label>
+        <input type="text" id="heightInput" placeholder="Wprowadź wartość" value="50"/>
     </div>
     
     <div>
